--- a/ld0a-ecomz/.project
+++ b/ld0a-ecomz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lp1a-ecomz</name>
+	<name>ld0a-ecomz</name>
 	<comment></comment>
 	<projects>
 	</projects>
