--- a/java/ldea-java-master/.project
+++ b/java/ldea-java-master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ld1a-java-master</name>
+	<name>ldea-java-master</name>
 	<comment></comment>
 	<projects>
 	</projects>
